# oddiofile

./: .gitignore  README_DEV.md  pyproject.toml
data/: in
src/: definitions.py
src/.ipynb_checkpoints/: definitions-checkpoint.py
src/notebooks/: exploritory.ipynb
src/notebooks/.ipynb_checkpoints/: exploritory-checkpoint.ipynb
