[tool.poetry]
name = "oddiofile"
version = "0.1.0"
description = "Classify urban sounds"
authors = ["Frank Cao <franktcao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
numpy = "~1.21"
torch = "^1.10.2"
torchaudio = "^0.10.2"
streamlit = "^1.5.0"

[tool.poetry.dev-dependencies]
typing-extensions = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
